--- a/python_tip1_falsy.ipynb
+++ b/python_tip1_falsy.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Falsy\n",
     "\n",
-    "Do you know that in Python the number zero, empty string, empty list, and more are evaluated as False?  We call them falsy. How do we know that they are falsy? There are two ways. One is to use the if function. The other way is to use bool. \n"
+    "Do you know that in Python the number zero, empty string, empty list, and more are evaluated as False?  We call them falsy. How do we know that they are falsy? There are two ways. One is to use the if statement. The other way is to use bool. \n"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
