add *args example

--- a/python_tip7_keywords_only_positional_only_parameters.ipynb
+++ b/python_tip7_keywords_only_positional_only_parameters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1d0d046f",
+   "id": "94c3e0a1",
    "metadata": {},
    "source": [
     "# Positional-only/keyword-only parameters"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e66d94cd",
+   "id": "997e5e83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "621eb864",
+   "id": "c5f6437d",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "df30609a",
+   "id": "31c5136f",
    "metadata": {},
    "outputs": [
     {
@@ -63,10 +63,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e5489b",
+   "id": "250776fc",
    "metadata": {},
    "source": [
     "## / specifies positional-only parameters\n",
+    "All parameters before / are positional only.\n",
     "\n",
     "This feature was added in Python 3.8."
    ]
@@ -74,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a5281e31",
+   "id": "c516e6c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fb173594",
+   "id": "52d9041e",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6ae2ceb7",
+   "id": "a016873e",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cfe3094f",
+   "id": "7369bd64",
    "metadata": {},
    "outputs": [
     {
@@ -149,16 +150,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a08c449",
+   "id": "3644575f",
    "metadata": {},
    "source": [
-    "## * specifies keyward-only parameters"
+    "## * specifies keyword-only parameters\n",
+    "All parameters after * are keyword only \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ac01908a",
+   "id": "a8e0e25e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c61bc843",
+   "id": "883a1357",
    "metadata": {},
    "outputs": [
     {
@@ -179,20 +181,20 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# b is keyward-only parameter\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mfoo\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# b is keyword-only parameter\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mfoo\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[0;31mTypeError\u001b[0m: foo() takes 1 positional argument but 2 were given"
      ]
     }
    ],
    "source": [
-    "# b is keyward-only parameter\n",
+    "# b is keyword-only parameter\n",
     "foo(1, 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "14753152",
+   "id": "eb5c3d9b",
    "metadata": {},
    "outputs": [
     {
@@ -202,6 +204,61 @@
       ]
      },
      "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(1, b=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5cf90fa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parameters after *args are also keyword-only parameters\n",
+    "def foo(a, /, *args, b):\n",
+    "    return a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "05b55265",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "foo() missing 1 required keyword-only argument: 'b'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mfoo\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: foo() missing 1 required keyword-only argument: 'b'"
+     ]
+    }
+   ],
+   "source": [
+    "foo(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1b646f07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
