--- a/Python_tip8_iterator_iterable.ipynb
+++ b/Python_tip8_iterator_iterable.ipynb
@@ -14,7 +14,7 @@
    "id": "e5359ea9",
    "metadata": {},
    "source": [
-    "iterable is an \"An object capable of returning its members one at a time.\" In other words, iterable is an object that can be iterated over or looped over. For example, list, string, tuple, dict, set are all iterables. Here we have a list [1, 2, 3]. We can use a for loop to iterate over this list:"
+    "iterable is an \"an object capable of returning its members one at a time.\" In other words, iterable is an object that can be iterated over or looped over. For example, list, string, tuple, dict, set are all iterables. Here we have a list [1, 2, 3]. We can use a for loop to iterate over this list:"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = [1, 2, 3]"
+    "L = [1, 2, 3]"
    ]
   },
   {
@@ -34,48 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in l:\n",
+    "for i in L:\n",
     "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd90dd36",
-   "metadata": {},
-   "source": [
-    "For this iterable of a list, we can use the built-in method getitem to get different elements from the position index 0, 1, 2:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e986841",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l.__getitem__(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dcd2fe1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l.__getitem__(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15e2fc10",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "l.__getitem__(2)"
    ]
   },
   {
@@ -83,7 +43,7 @@
    "id": "94006b83",
    "metadata": {},
    "source": [
-    "More importantly, any object with the iter method is a iterable. We can call the iter method on our iterable list l. You can either call this method by l.`__iter``__() or iter(l). The result of this is a iterator, let's call it iterl. "
+    "Any object with the iter method is an iterable. We can call the iter method on our iterable list l. You can either call this method by `L.__iter__()` or iter(l). The result of this is a iterator, let's call it iterl. "
    ]
   },
   {
@@ -93,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l.__iter__()"
+    "L.__iter__()"
    ]
   },
   {
@@ -103,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iter(l)"
+    "iter(L)"
    ]
   },
   {
@@ -113,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iterl = iter(l)"
+    "it = iter(L)"
    ]
   },
   {
@@ -131,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(iterl)"
+    "next(it)"
    ]
   },
   {
@@ -141,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(iterl)"
+    "next(it)"
    ]
   },
   {
@@ -151,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(iterl)"
+    "next(it)"
    ]
   },
   {
@@ -169,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(iterl)"
+    "next(it)"
    ]
   },
   {
@@ -187,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iter(iterl)"
+    "iter(it)"
    ]
   },
   {
@@ -197,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iterl"
+    "it"
    ]
   },
   {
@@ -207,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iter(iterl) == iterl"
+    "iter(it) == it"
    ]
   },
   {
@@ -345,16 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MyIterable([1, 2, 3]).__iter__()"
+    "MyIterable1([1, 2, 3]).__iter__()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5420c0e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
