add for loop example

--- a/Python_tip8_iterator_iterable.ipynb
+++ b/Python_tip8_iterator_iterable.ipynb
@@ -184,6 +184,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c3e2f2e",
+   "metadata": {},
+   "source": [
+    "# iterable and iterator (medium)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "344a3317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# two for loops of L have different iterator, each has its own state. \n",
+    "L = [1, 2]\n",
+    "for x in L:\n",
+    "    print('x', x)\n",
+    "    for y in L:\n",
+    "        print('   y', y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07fc5ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iterator has a state\n",
+    "# these two have the same iterator, which shares the state\n",
+    "# when x iterated over 1, the state moves to 2, that's why y is only iterating over 2\n",
+    "it = iter([1, 2])\n",
+    "for x in it:\n",
+    "    print('x', x)\n",
+    "    for y in it:\n",
+    "        print('y', y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0bdad112",
    "metadata": {},
    "source": [
@@ -199,9 +239,17 @@
    "source": [
     "class MyIterator:\n",
     "    def __init__(self, vals):\n",
-    "        self.it = iter(vals)\n",
+    "        self.index = 0\n",
+    "        self.vals = vals\n",
+    "\n",
     "    def __next__(self):\n",
-    "        return next(self.it)\n",
+    "        try:\n",
+    "            rv = self.vals[self.index]\n",
+    "        except IndexError:\n",
+    "            raise StopIteration from None\n",
+    "        self.index += 1\n",
+    "        return rv\n",
+    "\n",
     "    def __iter__(self):\n",
     "        return self"
    ]
@@ -216,6 +264,7 @@
     "class MyIterable1:\n",
     "    def __init__(self, vals):\n",
     "        self.vals = vals\n",
+    "\n",
     "    def __iter__(self):\n",
     "        return MyIterator(self.vals)\n",
     "\n",
@@ -307,14 +356,6 @@
    "source": [
     "MyIterable1([1, 2, 3]).__iter__()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f00221e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
