--- a/python_tip9_else.ipynb
+++ b/python_tip9_else.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "e2a0a492-a8f7-4808-b5b4-2592dbace130",
    "metadata": {
     "tags": []
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "40bdd7b3-ad94-4547-800d-4a4fa25dbe73",
    "metadata": {
     "tags": []
@@ -76,27 +76,19 @@
    "source": [
     "But `else` can useful when we have a `break` in the loop:\n",
     "\n",
-    "`else`: if we exict the loop without break\n"
+    "`else`: if we exit the loop without the break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 3,
    "id": "b1728220-fd5d-4a8d-bc7f-ef13d63dac38",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 not seen\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for x in [1, 20, 3]:\n",
+    "for x in [1, 2, 3]:\n",
     "    if x == 2:\n",
     "        break\n",
     "else:\n",
@@ -105,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "20b724c0-5db0-45af-a31b-35ece8e47914",
    "metadata": {
     "tags": []
@@ -136,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 5,
    "id": "8f59f28e-9b8e-4e04-873c-502d16a204c9",
    "metadata": {
     "tags": []
@@ -162,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 6,
    "id": "2592c17b-9234-488c-bdab-e6f69a39f938",
    "metadata": {
     "tags": []
@@ -199,42 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "ec7548e1-c97f-4793-abf0-ee42521be04e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "id": "c12ec1fd-5a5f-4260-a23e-429de1eaa821",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random.randint(-1, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "id": "a549e59a-aad3-4d2e-b2eb-8a7ed876f20a",
    "metadata": {
     "tags": []
@@ -246,7 +203,7 @@
        "['#########', '#..v....#', '#....w..#', '#.*.....#', '#.......#', '#########']"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
    "id": "d103dcb7-e012-4afb-91b4-2b2c9494997a",
    "metadata": {
     "tags": []
@@ -284,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "id": "c391ac3a-c219-45e3-a013-4e0922b11e64",
    "metadata": {
     "tags": []
@@ -296,7 +253,7 @@
        "False"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "id": "18bb4924-5b83-40f4-b2e9-0758dc9fc908",
    "metadata": {
     "tags": []
@@ -319,7 +276,7 @@
        "False"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 11,
    "id": "532eef02-f56c-4b06-ab7d-37776e362340",
    "metadata": {
     "tags": []
@@ -342,7 +299,7 @@
        "True"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,13 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "id": "e3728ab4-1bcf-449c-91f7-ef3dcb49c125",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import random\n",
     "class Robot:\n",
     "    def __init__(self, x, y, life=5):\n",
     "        self.x = x\n",
@@ -397,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 14,
    "id": "063c3f2d-d346-40e8-92e9-3031e4187d8b",
    "metadata": {
     "tags": []
@@ -426,8 +384,8 @@
       "searching... life remaining: 3\n",
       "#########\n",
       "#..v....#\n",
-      "#....w..#\n",
-      "#@*.....#\n",
+      "#@...w..#\n",
+      "#.*.....#\n",
       "#.......#\n",
       "#########\n",
       "\n",
@@ -442,15 +400,15 @@
       "searching... life remaining: 1\n",
       "#########\n",
       "#..v....#\n",
-      "#@...w..#\n",
-      "#.*.....#\n",
+      "#....w..#\n",
+      "#.*@....#\n",
       "#.......#\n",
       "#########\n",
       "\n",
       "searching... life remaining: 0\n",
       "#########\n",
-      "#.@v....#\n",
-      "#....w..#\n",
+      "#..v....#\n",
+      "#..@.w..#\n",
       "#.*.....#\n",
       "#.......#\n",
       "#########\n",
@@ -464,7 +422,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mDeadRobotError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[193], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m DeadRobotError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrobot died before finding the treasure\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[14], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m DeadRobotError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrobot died before finding the treasure\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mDeadRobotError\u001b[0m: robot died before finding the treasure"
      ]
     }
