--- a/python_tip8_iterator_iterable.ipynb
+++ b/python_tip8_iterator_iterable.ipynb
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "# two for loops of L have different iterator, each has its own state. \n",
-    "L = [1, 2]\n",
+    "L = [1, 2] #iterable \n",
     "for x in L:\n",
     "    print('x', x)\n",
     "    for y in L:\n",
@@ -215,7 +215,7 @@
     "# iterator has a state\n",
     "# these two have the same iterator, which shares the state\n",
     "# when x iterated over 1, the state moves to 2, that's why y is only iterating over 2\n",
-    "it = iter([1, 2])\n",
+    "it = iter([1, 2]) #iterator \n",
     "for x in it:\n",
     "    print('x', x)\n",
     "    for y in it:\n",
@@ -232,130 +232,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec2e1abe",
+   "execution_count": 1,
+   "id": "b215898e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyIterator:\n",
-    "    def __init__(self, vals):\n",
-    "        self.index = 0\n",
-    "        self.vals = vals\n",
-    "\n",
-    "    def __next__(self):\n",
-    "        try:\n",
-    "            rv = self.vals[self.index]\n",
-    "        except IndexError:\n",
-    "            raise StopIteration from None\n",
-    "        self.index += 1\n",
-    "        return rv\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        return self"
+    "def doubler_generator(x):\n",
+    "    while True:\n",
+    "        yield x\n",
+    "        x *= 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a99f549",
+   "execution_count": 2,
+   "id": "1318cad0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "class MyIterable1:\n",
-    "    def __init__(self, vals):\n",
-    "        self.vals = vals\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        return MyIterator(self.vals)\n",
-    "\n",
-    "for x in MyIterable1([1, 2, 3]):\n",
+    "for x in doubler_generator(1):\n",
     "    print(x)\n",
-    "\n"
+    "    if x >= 16:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "302b80c9",
+   "execution_count": 3,
+   "id": "b77647b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyIterable2:\n",
-    "    def __init__(self, vals):\n",
-    "        self.vals = vals\n",
-    "    def __iter__(self):\n",
-    "        yield from self.vals\n",
+    "class DoublerIterator:\n",
+    "    def __init__(self, init):\n",
+    "        self.init = init\n",
+    "        self.cur = None\n",
+    "        self.next = init\n",
     "\n",
-    "\n",
-    "for x in MyIterable2([1, 2, 3]):\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f165b1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iter(MyIterable2([1, 2, 3]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8cb62e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyIterable3:\n",
-    "    def __init__(self, vals):\n",
-    "        self.vals = vals\n",
     "    def __iter__(self):\n",
-    "        for val in self.vals:\n",
-    "            yield val"
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.cur = self.next\n",
+    "        self.next *= 2\n",
+    "        return self.cur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f5113f13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "doubling_iterator = DoublerIterator(1)\n",
+    "for x in doubling_iterator:\n",
+    "    print(x)\n",
+    "    if x >= 16:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "77a005bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doubling_iterator.init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "23666a09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doubling_iterator.cur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0ed84952",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doubling_iterator.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f0483523",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(doubling_iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e7a506f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoublerIterable:\n",
+    "    def __init__(self, init):\n",
+    "        self.init = init\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return DoublerIterator(self.init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a1238e55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "doubler_iterable = DoublerIterable(1)\n",
+    "for x in doubler_iterable:\n",
+    "    print(x)\n",
+    "    if x >= 16:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e241c8b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in doubler_iterable:\n",
+    "    print(x)\n",
+    "    if x >= 16:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e75e90d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'DoublerIterable' object is not an iterator",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdoubler_iterable\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'DoublerIterable' object is not an iterator"
+     ]
+    }
+   ],
+   "source": [
+    "next(doubler_iterable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "65772a36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoublerIterableAlt:\n",
+    "    def __init__(self, init):\n",
+    "        self.init = init\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        x = self.init\n",
+    "        while True:\n",
+    "            yield x\n",
+    "            x *= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9ad8276f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "doubler_iterable_alt = DoublerIterableAlt(1)\n",
+    "for x in doubler_iterable_alt:\n",
+    "    print(x)\n",
+    "    if x >= 16:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06792572",
+   "id": "93a3478c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for x in MyIterable3([1, 2, 3]):\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbd7c8ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iter(MyIterable1([1, 2, 3]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6ca4366",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MyIterable2([1, 2, 3]).__iter__()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28cdbe63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MyIterable1([1, 2, 3]).__iter__()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -374,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
