--- a/python_tip9_else.ipynb
+++ b/python_tip9_else.ipynb
@@ -12,23 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e2a0a492-a8f7-4808-b5b4-2592dbace130",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "all done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in [1, 2, 3]:\n",
     "    print(x)\n",
@@ -46,23 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "40bdd7b3-ad94-4547-800d-4a4fa25dbe73",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "all done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in [1, 2, 3]:\n",
     "    print(x)\n",
@@ -81,24 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b1728220-fd5d-4a8d-bc7f-ef13d63dac38",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for x in [1, 2, 3]:\n",
-    "    if x == 2:\n",
-    "        break\n",
-    "else:\n",
-    "    print('2 not seen')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "20b724c0-5db0-45af-a31b-35ece8e47914",
    "metadata": {
     "tags": []
    },
@@ -107,15 +69,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "in else\n"
+      "2 not seen\n"
      ]
     }
    ],
+   "source": [
+    "for x in [1, 20, 3]:\n",
+    "    if x == 2:\n",
+    "        break\n",
+    "else:\n",
+    "    print('2 not seen')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20b724c0-5db0-45af-a31b-35ece8e47914",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "for x in []:\n",
     "    print(x)\n",
     "else:\n",
     "    print('in else')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "472b64fd-3ea6-4ac1-ad0b-fb718841d6e2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "dirnames = [\"foo/\", \".\"]\n",
+    "filename = \"findme.txt\"\n",
+    "for dirname in dirnames:\n",
+    "    cur = Path(dirname).joinpath(filename)\n",
+    "    if cur.is_file():\n",
+    "        break\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"{filename!r} not found\")\n",
+    "print(f'Found {cur}')"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "\n",
     "MONSTERS = {\n",
     "    'v': 'vampire',\n",
-    "    'w': 'wolf',\n",
+    "    'w': 'werewolf',\n",
     "}\n",
     "IMPASSABLE = {\"#\", \"&\"}\n",
     "TREASURES = {\"*\", \"$\"}"
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e3728ab4-1bcf-449c-91f7-ef3dcb49c125",
    "metadata": {
     "tags": []
@@ -375,8 +375,8 @@
       "\n",
       "searching... life remaining: 4\n",
       "#########\n",
-      "#..v....#\n",
-      "#.@..w..#\n",
+      "#.@v....#\n",
+      "#....w..#\n",
       "#.*.....#\n",
       "#.......#\n",
       "#########\n",
@@ -384,31 +384,15 @@
       "searching... life remaining: 3\n",
       "#########\n",
       "#..v....#\n",
-      "#@...w..#\n",
-      "#.*.....#\n",
-      "#.......#\n",
-      "#########\n",
-      "\n",
-      "searching... life remaining: 2\n",
-      "#########\n",
-      "#..v....#\n",
       "#.@..w..#\n",
       "#.*.....#\n",
       "#.......#\n",
       "#########\n",
       "\n",
-      "searching... life remaining: 1\n",
+      "Oh no, robot was mutilated to death by vampire!\n",
       "#########\n",
-      "#..v....#\n",
+      "#..@....#\n",
       "#....w..#\n",
-      "#.*@....#\n",
-      "#.......#\n",
-      "#########\n",
-      "\n",
-      "searching... life remaining: 0\n",
-      "#########\n",
-      "#..v....#\n",
-      "#..@.w..#\n",
       "#.*.....#\n",
       "#.......#\n",
       "#########\n",
@@ -441,6 +425,14 @@
     "else:\n",
     "    raise DeadRobotError(\"robot died before finding the treasure\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b68a1188-d47c-4eef-b5fc-972a41df72ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
